# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: game_display.h  logger.h  snake_game.h
src/: game_display.cpp  logger.cpp  snake_game.cpp
